--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacker Times</title>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <!-- NEWSPAPER CONTAINER -->
@@ -38,12 +39,12 @@
     </main>
     <!-- more articles -->
     <div class="more-articles">
-      <section>
+      <section class="secone">
         <h4>Tabs vs. Spaces</h4>
         <img src="assets/article-one.png" alt="placeholder">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
-      <section>
+      <section class="sectwo">
         <h4>How Much Caffeine Is Too Much?</h4>
         <img src="assets/article-two.png" alt="placeholder">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
